--- a/tigamap/templates/tigamap/app.html
+++ b/tigamap/templates/tigamap/app.html
@@ -115,6 +115,8 @@ function removeMe(){
         </div>
 
             <ul class="nav navbar-nav navbar-right">
+            {% block photo_menu %}
+            {% endblock %}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         {%  trans 'Adult tiger mosquitoes' %}<b
