almost fixed still

--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -78,6 +78,7 @@
 
                     markers_clustered.addTo(map);
                     L.control.layers(baseMaps, null).addTo(map);
+                    map.addLayer(markers_clustered);
                 }
             });
         }
