added check for null repors in ajax call

--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -61,14 +61,14 @@
                     var thisIcon = new YellowIcon();
 
                     $.each(data, function(index, value) {
-                        console.log(value.lon);
-                        console.log(value.lat);
+                        if(value != null){
                         var cluster_marker = L.marker([value.lat, value.lon], {icon: thisIcon});
                         var basic_marker = L.marker([value.lat, value.lon], {icon: thisIcon});
                         cluster_marker.bindPopup(value.type);
                         basic_marker.bindPopup(value.type);
                         markers_clustered.addLayer(cluster_marker);
                         markers_basic.addLayer(basic_marker);
+                        }
                     });
 
                     var baseMaps = {
@@ -78,7 +78,6 @@
 
                     markers_clustered.addTo(map);
                     L.control.layers(baseMaps, null).addTo(map);
-                    map.addLayer(markers_clustered);
                 }
             });
         }
