added check for null repors and also null fields in report in ajax call

--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -61,7 +61,7 @@
                     var thisIcon = new YellowIcon();
 
                     $.each(data, function(index, value) {
-                        if(value != null){
+                        if(value != null && value.lat != null && value.lon != null && value.type != null){
                         var cluster_marker = L.marker([value.lat, value.lon], {icon: thisIcon});
                         var basic_marker = L.marker([value.lat, value.lon], {icon: thisIcon});
                         cluster_marker.bindPopup(value.type);
