--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -73,7 +73,7 @@
                     markers_clustered.addTo(map);
                     }
                     if(day < 100){
-                    get_data(day + 1);
+                    get_data(day + 1, map);
                     }
                 }
             });
@@ -89,7 +89,7 @@
                 saveMapState(map)
             });
 
-            get_data(1, map);
+            get_data(0, map);
 
         }
 
