--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -40,8 +40,9 @@
                         }
                     });
                     var thisIcon = new YellowIcon();
+                    var percent_done = 0;
 
-        function get_data(day, map) {
+        function get_data(day, map, progress_bar) {
             var csrftoken = $.cookie('csrftoken');
             $.ajax({
                 url: 'http://tigaserver.atrapaeltigre.com/api/map_data/?day=' + day,
@@ -59,20 +60,30 @@
 
                     $.each(data, function(index, value) {
                         if(value != null && value.lat != null && value.lon != null && value.type != null){
-                        var cluster_marker = L.marker([value.lat, value.lon], {icon: thisIcon});
-                        cluster_marker.bindPopup(value.type);
-                        markers_clustered.addLayer(cluster_marker);
+                        markers_clustered.addLayer(L.marker([value.lat, value.lon], {icon: thisIcon}).bindPopup(value.type));
+                        markers_basic.addLayer(L.marker([value.lat, value.lon], {icon: thisIcon}).bindPopup(value.type));
 
-                        L.marker([value.lat, value.lon], {icon: thisIcon}).bindPopup(value.type).addTo(map);
                         }
                     });
 
+                        markers_clustered.addTo(map);
+
                     }
-                    if(day < {{ end_day }}){
+                    if(day <= {{ end_day }}){
                     get_data(day + 1, map);
-                    } else if(day == {{ end_day }}){
-                    markers_clustered.addTo(map);
                     }
+                    if(day == {{ end_day }}){
+                        var baseMaps = {
+                            "{% trans 'clusters' %}": markers_clustered,
+                            "{% trans 'points' %}": markers_basic
+                        };
+
+                        L.control.layers(baseMaps, null).addTo(map);
+
+                    }
+
+                    percent_done = 100 * day/{{ end_day }}
+                    progress_bar.html(percent_done.toString() + "%").attr("width", percent_done.toString() + "%").attr("aria-valuenow", percent_done.toString());
                 }
             });
         }
@@ -87,12 +98,25 @@
                 saveMapState(map)
             });
 
-            get_data(0, map);
+            var progress_bar = $("#progress_bar");
+
+            get_data(0, map, progress_bar);
 
         }
 
     </script>
 
+
+{% endblock %}
+
+{% block map_area %}
+
+    {{ block.super }}
+
+    <div class="progress" style="position: absolute; bottom: 10px; left: 10px; width: 60%;">
+  <div id="progress_bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0;">
+  </div>
+</div>
 
 {% endblock %}
 
