--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -38,7 +38,7 @@ background-repeat: repeat-x;
 height: 100%;
 font-size: 12px;
 line-height: 20px;
-width: 60%;
+width: 0;
 color: #fff;
 text-align: center;
 background-color: #428bca;
@@ -67,6 +67,7 @@ border-radius: 15px;
                     });
                     var thisIcon = new YellowIcon();
                     var percent_done = 0;
+                    var progress_bar = $("#progress_bar");
 
         function get_data(day, map) {
             var csrftoken = $.cookie('csrftoken');
@@ -92,17 +93,18 @@ border-radius: 15px;
                     });
 
                         markers_clustered.addTo(map);
+                    percent_done = 100 * Math.floor(day/{{ end_day }});
+                    progress_bar.css("width", percent_done.toString() + "%");
+                    if(percent_done > 20){
+                        progress_bar.html(percent_done.toString() + "%");
+                    }
+
 
                     }
                     if(day <= {{ end_day }}){
                     get_data(day + 1, map);
                     }
 
-                    percent_done = 100 * Math.floor(day/{{ end_day }});
-                    $("#progress_bar").css("width", percent_done.toString() + "%");
-                    if(percent_done > 20){
-                        $("#progress_bar").html(percent_done.toString() + "%");
-                    }
                 }
             });
         }
@@ -117,7 +119,7 @@ border-radius: 15px;
                 saveMapState(map)
             });
 
-            var progress_bar = $("#progress_bar");
+            progress_bar = $("#progress_bar");
 
             get_data(0, map);
 
