--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -92,6 +92,7 @@ border-radius: 15px;
                     markers_clustered.addTo(map);
                     var percent_done = 100 * Math.floor(day/{{ end_day }});
                     $("#progress_bar").css("width", percent_done.toString() + "%");
+                    console.log("test");
                     console.log("day: " + day);
                     console.log("end_day: " + {{ end_day }});
                     console.log("percent done: " + percent_done);
