--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -90,7 +90,7 @@ border-radius: 15px;
                     });
 
                     markers_clustered.addTo(map);
-                    var percent_done = 100 * Math.floor(day/{{ end_day }});
+                    var percent_done = Math.floor(100 * day/{{ end_day }});
                     $("#progress_bar").css("width", percent_done.toString() + "%");
                     console.log("test");
                     console.log("day: " + day.toString());
