--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -21,50 +21,54 @@
             text-align: right;
         }
 
-    .my-progress-bar-container {
-background-color: rgba(0,0,0,.25);
-border-radius: 15px;
-        position: absolute;
-        bottom: 30px;
-        left: 10px;
-        width: 60%;
-        height: 20px;
-    }
+        .my-progress-bar-container {
+            background-color: rgba(0, 0, 0, .25);
+            border-radius: 15px;
+            position: absolute;
+            bottom: 30px;
+            left: 10px;
+            width: 60%;
+            height: 20px;
+        }
 
-    .my-progress-bar {
-background-image: -webkit-linear-gradient(top,#428bca 0,#3071a9 100%);
-background-image: linear-gradient(to bottom,#428bca 0,#3071a9 100%);
-background-repeat: repeat-x;
-height: 100%;
-font-size: 12px;
-line-height: 20px;
-color: #fff;
-text-align: center;
-background-color: #428bca;
--webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
-border-radius: 15px;
-    }
+        .my-progress-bar {
+            background-image: -webkit-linear-gradient(top, #428bca 0, #3071a9 100%);
+            background-image: linear-gradient(to bottom, #428bca 0, #3071a9 100%);
+            background-repeat: repeat-x;
+            height: 100%;
+            width: 0;
+            font-size: 12px;
+            line-height: 20px;
+            color: #fff;
+            text-align: center;
+            background-color: #428bca;
+            -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
+            box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
+            border-radius: 15px;
+        }
 
     </style>
 
-        {% leaflet_js plugins="marker_cluster_yellow" %}
-        {% leaflet_css plugins="marker_cluster_yellow" %}
+    {% leaflet_js plugins="marker_cluster_yellow" %}
+    {% leaflet_css plugins="marker_cluster_yellow" %}
 
 
     <script src="{% static "tigamap/jquery-1.11.1.min.js" %}"></script>
-<script src="{% static "tigamap/jquery.cookie.js" %}"></script>
+    <script src="{% static "tigamap/jquery.cookie.js" %}"></script>
 
     <script type="text/javascript">
 
-                    var markers_clustered = new L.MarkerClusterGroup();
+        var markers_clustered = new L.MarkerClusterGroup();
 
-                    var YellowIcon = L.Icon.Default.extend({
-                        options: {
-                            iconUrl: '{% static "tigamap/yellow_icon.png" %}'
-                        }
-                    });
-                    var thisIcon = new YellowIcon();
+        var YellowIcon = L.Icon.Default.extend({
+            options: {
+                iconUrl: '{% static "tigamap/yellow_icon.png" %}'
+            }
+        });
+        var thisIcon = new YellowIcon();
+        var percent_done;
+        var progress_bar;
+        var day_just_finished = 0;
 
         function get_data(day, map) {
             var csrftoken = $.cookie('csrftoken');
@@ -80,34 +84,23 @@ border-radius: 15px;
                 },
                 success: function (data) {
 
-                    if(data != null && data.length > 0){
+                    if (data != null && data.length > 0) {
 
-                    $.each(data, function(index, value) {
-                        if(value != null && value.lat != null && value.lon != null && value.type != null){
-                        markers_clustered.addLayer(L.marker([value.lat, value.lon], {icon: thisIcon}).bindPopup(value.type));
+                        $.each(data, function (index, value) {
+                            if (value != null && value.lat != null && value.lon != null && value.type != null) {
+                                markers_clustered.addLayer(L.marker([value.lat, value.lon], {icon: thisIcon}).bindPopup(value.type));
 
+                            }
+                        });
+
+                        markers_clustered.addTo(map);
+
+                    }
+                        percent_done = Math.floor(100 * day_just_finished++ /{{ end_day }});
+                        progress_bar.css("width", percent_done.toString() + "%");
+                        if (percent_done > 20) {
+                            progress_bar.html(percent_done.toString() + "%");
                         }
-                    });
-
-                    markers_clustered.addTo(map);
-                    var percent_done = Math.floor(100 * day/{{ end_day }});
-                    $("#progress_bar").css("width", percent_done.toString() + "%");
-                    console.log("test");
-                    console.log("day: " + day.toString());
-                    console.log("end_day: " + "{{ end_day }}");
-                    console.log("percent done: " + percent_done.toString());
-                    console.log("percent done: " + percent_done.toString() + "%");
-                    console.log("pg width: " + $("#progress_bar").css("width"));
-                    if(percent_done > 20){
-                        $("#progress_bar").html(percent_done.toString() + "%");
-                    }
-
-
-                    }
-                    if(day <= {{ end_day }}){
-                    get_data(day + 1, map);
-                    }
-
                 }
             });
         }
@@ -122,7 +115,10 @@ border-radius: 15px;
                 saveMapState(map)
             });
 
-            get_data(0, map);
+            progress_bar = $("#progress_bar");
+            for(var d = 0; d <= {{ end_day }}; d++){
+            get_data(d, map);
+            }
 
         }
 
@@ -136,9 +132,9 @@ border-radius: 15px;
     {{ block.super }}
 
     <div class="my-progress-bar-container">
-  <div id="progress_bar" class="my-progress-bar">
-  </div>
-</div>
+        <div id="progress_bar" class="my-progress-bar">
+        </div>
+    </div>
 
 {% endblock %}
 
