--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -45,6 +45,8 @@
             -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
             box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
             border-radius: 15px;
+            -webkit-transition: width .6s ease;
+            transition: width .6s ease;
         }
 
     </style>
