--- a/tigamap/templates/tigamap/validated_report_map.html
+++ b/tigamap/templates/tigamap/validated_report_map.html
@@ -105,7 +105,7 @@
                             progress_bar.html(percent_done.toString() + "%");
                         }
                     if(percent_done >= 100){
-                        progress_bar_container.hide()
+                        progress_bar_container.fadeOut();
                     }
                 }
             });
